--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,9 +21,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: yarn
 
       - name: Install yarn
-        run: npm i yarn
+        run: sudo npm i -g yarn
 
       - name: Install dependencies
         run: yarn
