--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,9 @@ permissions:
   pages: write
   id-token: write
 
+env:
+  NODE_OPTIONS: --openssl-legacy-provider
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -20,7 +23,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
           cache: yarn
 
       - name: Install yarn
