--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,15 +26,15 @@ jobs:
       - name: Install yarn
         run: sudo npm i -g yarn
 
-      - name: Fix audit
-        run: npm_config_yes=true npx yarn-audit-fix
-
       - name: Install dependencies
         run: yarn
 
+      - name: Fix audit
+        run: npm_config_yes=true npx yarn-audit-fix
+
       - name: Build
-        env:
-          NODE_OPTIONS: --openssl-legacy-provider
+        #env:
+        #  NODE_OPTIONS: --openssl-legacy-provider
         run: yarn build
 
       - name: Setup GitHub Pages
