--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
           cache: yarn
 
       - name: Install yarn
@@ -28,6 +28,9 @@ jobs:
 
       - name: Install dependencies
         run: yarn
+
+      - name: Fix audit
+        run: npm_config_yes=true npx yarn-audit-fix
 
       - name: Build
         run: yarn build
