--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "usage": "docusaurus --help",
+    "usage:build": "docusaurus build --help",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
@@ -11,7 +13,9 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "start:inner": "yarn start --config=docusaurus.config-inner.js",
+    "build:inner": "yarn build --config=docusaurus.config-inner.js --out-dir=build/inner"
   },
   "dependencies": {
     "@docusaurus/core": "^2.4.1",
