--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@svgr/webpack": "^8.0.1",
     "clsx": "^1.2.1",
     "file-loader": "^6.2.0",
+    "hast-util-is-element": "1.1.0",
     "prism-react-renderer": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "rehype-katex": "5",
+    "remark-math": "3",
     "url-loader": "^4.1.1"
   },
   "browserslist": {
