--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rehype-katex": "^6.0.3",
-    "remark-math": "5",
+    "remark-math": "^5.1.1",
     "url-loader": "^4.1.1"
   },
   "browserslist": {
