--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
           cache: yarn
 
       - name: Install yarn
-        run: npm i yarn
+        run: sudo npm i -g yarn
 
       - name: Install dependencies
         run: yarn
